--- a/WebDriverTest/pom.xml
+++ b/WebDriverTest/pom.xml
@@ -15,6 +15,11 @@
 	<artifactId>testng</artifactId>
 	<version>6.9.4</version>
 </dependency>
+        		<dependency>
+			<groupId>org.uncommons</groupId>
+			<artifactId>reportng</artifactId>
+			<version>1.1.4</version>
+		</dependency>
                    	
         <dependency>              
             <groupId>org.seleniumhq.selenium</groupId>                              
@@ -31,7 +36,13 @@
             <artifactId>testng</artifactId>                             
             <version>6.8</version>                              
             <scope>test</scope>                                     
-       </dependency>              
+       </dependency>  
+       <dependency>
+	<groupId>com.google.inject</groupId>
+	<artifactId>guice</artifactId>
+	<version>1.0</version>
+</dependency>
+                   
 </dependencies>
 <build>
 		<plugins>
